--- a/src/app/juego-de-escape-room/primer-escenario/primer-escenario.page.html
+++ b/src/app/juego-de-escape-room/primer-escenario/primer-escenario.page.html
@@ -4,11 +4,12 @@
     <ion-grid>
       <ion-row>
         <ion-col>
-          <div *ngIf="showImage == false">
+
+           <div *ngIf="showImage == false">
             <img src="../../../assets/escape-room/profesor.png">
             <mat-icon (click)="start()" style="color: blue; zoom: 2.0;">contact_support</mat-icon>
-          </div>
-          <div *ngIf="mapa == imagenBase && !recogido && !recogido2 && !recogido3 else primer_content">
+          </div> 
+         <div *ngIf="mapa == imagenBase && !recogido && !recogido2 && !recogido3 else primer_content">
             <button mat-mini-fab aria-label="miniFabButton"
               style="background-color: orange; position: fixed; margin-top: 10px; " (click)="abrirMochila()">
               <mat-icon>folder</mat-icon>
@@ -22,17 +23,17 @@
               (click)="pasarAlSiguienteEscenario()">SALIR
             </button>
             <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 50px;"
-              (click)="abrirObjeto(objeto1enigma)" src="../../../assets/escape-room/{{objeto1enigma.nombre}}.png">
+              (click)="abrirObjeto(objeto4enigma)" src="../../../assets/escape-room/{{objeto4enigma.imagen}}">
             <img style="position: fixed; margin-left: 340px; margin-top: 110px; height: 50px;"
-              (click)="abrirObjeto(objeto2enigma)" src="../../../assets/escape-room/{{objeto2enigma.nombre}}.png">
+              (click)="abrirObjeto(objeto5enigma)" src="../../../assets/escape-room/{{objeto5enigma.imagen}}">
 
             <img style="margin-left: 300px; margin-top: 210px; height: 50px;"
-              (click)="cogerObjeto(objeto1escape.nombre)"
-              src="../../../assets/escape-room/objetos/{{objeto1escape.nombre}}.png">
-            <img style="margin-left: 5px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto2escape.nombre)"
-              src="../../../assets/escape-room/objetos/{{objeto2escape.nombre}}.png">
-            <img style="margin-left: 10px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto3escape.nombre)"
-              src="../../../assets/escape-room/objetos/{{objeto3escape.nombre}}.png">
+              (click)="cogerObjeto(objeto1escape)"
+              src="../../../assets/escape-room/objetos/{{objeto1escape.imagen}}">
+            <img style="margin-left: 5px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto2escape)"
+              src="../../../assets/escape-room/objetos/{{objeto2escape.imagen}}">
+            <img style="margin-left: 10px; margin-top: 210px; height: 50px;" (click)="cogerObjeto(objeto3escape)"
+              src="../../../assets/escape-room/objetos/{{objeto3escape.imagen}}">
 
           </div>
           <ng-template #primer_content>
@@ -50,16 +51,16 @@
                 (click)="pasarAlSiguienteEscenario()">SALIR
               </button>
               <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto1enigma)" src="../../../assets/escape-room/{{objeto1enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto4enigma)" src="../../../assets/escape-room/{{objeto4enigma.imagen}}">
               <img style="position: fixed; margin-left: 340px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto2enigma)" src="../../../assets/escape-room/{{objeto2enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto5enigma)" src="../../../assets/escape-room/{{objeto5enigma.imagen}}">
 
               <img style="margin-left: 305px; margin-top: 210px; height: 50px;"
-                (click)="cogerObjeto(objeto2escape.nombre)"
-                src="../../../assets/escape-room/objetos/{{objeto2escape.nombre}}.png">
+                (click)="cogerObjeto(objeto2escape)"
+                src="../../../assets/escape-room/objetos/{{objeto2escape.imagen}}">
               <img style="margin-left: 10px; margin-top: 210px; height: 50px;"
-                (click)="cogerObjeto(objeto3escape.nombre)"
-                src="../../../assets/escape-room/objetos/{{objeto3escape.nombre}}.png">
+                (click)="cogerObjeto(objeto3escape)"
+                src="../../../assets/escape-room/objetos/{{objeto3escape.imagen}}">
             </div>
           </ng-template>
           <ng-template #segundo_content>
@@ -77,16 +78,16 @@
                 (click)="pasarAlSiguienteEscenario()">SALIR
               </button>
               <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto1enigma)" src="../../../assets/escape-room/{{objeto1enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto4enigma)" src="../../../assets/escape-room/{{objeto4enigma.imagen}}">
               <img style="position: fixed; margin-left: 340px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto2enigma)" src="../../../assets/escape-room/{{objeto2enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto5enigma)" src="../../../assets/escape-room/{{objeto5enigma.imagen}}">
 
               <img style="margin-left: 305px; margin-top: 210px; height: 50px;"
-                (click)="cogerObjeto(objeto1escape.nombre)"
-                src="../../../assets/escape-room/objetos/{{objeto1escape.nombre}}.png">
+                (click)="cogerObjeto(objeto1escape)"
+                src="../../../assets/escape-room/objetos/{{objeto1escape.imagen}}">
               <img style="margin-left: 10px; margin-top: 210px; height: 50px;"
-                (click)="cogerObjeto(objeto3escape.nombre)"
-                src="../../../assets/escape-room/objetos/{{objeto3escape.nombre}}.png">
+                (click)="cogerObjeto(objeto3escape)"
+                src="../../../assets/escape-room/objetos/{{objeto3escape.imagen}}">
             </div>
           </ng-template>
           <ng-template #tercer_content>
@@ -104,16 +105,16 @@
                 (click)="pasarAlSiguienteEscenario()">SALIR
               </button>
               <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto1enigma)" src="../../../assets/escape-room/{{objeto1enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto4enigma)" src="../../../assets/escape-room/{{objeto4enigma.imagen}}">
               <img style="position: fixed; margin-left: 340px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto2enigma)" src="../../../assets/escape-room/{{objeto2enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto5enigma)" src="../../../assets/escape-room/{{objeto5enigma.imagen}}">
 
               <img style="margin-left: 305px; margin-top: 210px; height: 50px;"
-                (click)="cogerObjeto(objeto1escape.nombre)"
-                src="../../../assets/escape-room/objetos/{{objeto1escape.nombre}}.png">
+                (click)="cogerObjeto(objeto1escape)"
+                src="../../../assets/escape-room/objetos/{{objeto1escape.imagen}}">
               <img style="margin-left: 10px; margin-top: 210px; height: 50px;"
-                (click)="cogerObjeto(objeto2escape.nombre)"
-                src="../../../assets/escape-room/objetos/{{objeto2escape.nombre}}.png">
+                (click)="cogerObjeto(objeto2escape)"
+                src="../../../assets/escape-room/objetos/{{objeto2escape.imagen}}">
             </div>
           </ng-template>
           <!---->
@@ -132,13 +133,13 @@
                 (click)="pasarAlSiguienteEscenario()">SALIR
               </button>
               <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto1enigma)" src="../../../assets/escape-room/{{objeto1enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto4enigma)" src="../../../assets/escape-room/{{objeto4enigma.imagen}}">
               <img style="position: fixed; margin-left: 340px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto2enigma)" src="../../../assets/escape-room/{{objeto2enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto5enigma)" src="../../../assets/escape-room/{{objeto5enigma.imagen}}">
 
               <img style="margin-left: 310px; margin-top: 210px; height: 50px;"
-                (click)="cogerObjeto(objeto3escape.nombre)"
-                src="../../../assets/escape-room/objetos/{{objeto3escape.nombre}}.png">
+                (click)="cogerObjeto(objeto3escape)"
+                src="../../../assets/escape-room/objetos/{{objeto3escape.imagen}}">
 
             </div>
           </ng-template>
@@ -157,13 +158,13 @@
                 (click)="pasarAlSiguienteEscenario()">SALIR
               </button>
               <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto1enigma)" src="../../../assets/escape-room/{{objeto1enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto4enigma)" src="../../../assets/escape-room/{{objeto4enigma.imagen}}">
               <img style="position: fixed; margin-left: 340px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto2enigma)" src="../../../assets/escape-room/{{objeto2enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto5enigma)" src="../../../assets/escape-room/{{objeto5enigma.imagen}}">
 
               <img style="margin-left: 305px; margin-top: 210px; height: 50px;"
-                (click)="cogerObjeto(objeto2escape.nombre)"
-                src="../../../assets/escape-room/objetos/{{objeto2escape.nombre}}.png">
+                (click)="cogerObjeto(objeto2escape)"
+                src="../../../assets/escape-room/objetos/{{objeto2escape.imagen}}">
             </div>
           </ng-template>
           <ng-template #sexto_content>
@@ -181,13 +182,13 @@
                 (click)="pasarAlSiguienteEscenario()">SALIR
               </button>
               <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto1enigma)" src="../../../assets/escape-room/{{objeto1enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto4enigma)" src="../../../assets/escape-room/{{objeto4enigma.imagen}}">
               <img style="position: fixed; margin-left: 340px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto2enigma)" src="../../../assets/escape-room/{{objeto2enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto5enigma)" src="../../../assets/escape-room/{{objeto5enigma.imagen}}">
 
               <img style="margin-left: 305px; margin-top: 210px; height: 50px;"
-                (click)="cogerObjeto(objeto1escape.nombre)"
-                src="../../../assets/escape-room/objetos/{{objeto1escape.nombre}}.png">
+                (click)="cogerObjeto(objeto1escape)"
+                src="../../../assets/escape-room/objetos/{{objeto1escape.imagen}}">
             </div>
           </ng-template>
           <ng-template #septimo_content>
@@ -205,13 +206,13 @@
                 (click)="pasarAlSiguienteEscenario()">SALIR
               </button>
               <img style="position: fixed; margin-left: 270px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto1enigma)" src="../../../assets/escape-room/{{objeto1enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto5enigma)" src="../../../assets/escape-room/{{objeto4enigma.imagen}}">
               <img style="position: fixed; margin-left: 340px; margin-top: 110px; height: 50px;"
-                (click)="abrirObjeto(objeto2enigma)" src="../../../assets/escape-room/{{objeto2enigma.nombre}}.png">
+                (click)="abrirObjeto(objeto4enigma)" src="../../../assets/escape-room/{{objeto5enigma.imagen}}">
 
             </div>
             <!---->
-          </ng-template>
+          </ng-template> 
         </ion-col>
       </ion-row>
     </ion-grid>
@@ -219,7 +220,7 @@
 
 </ion-content>
 
-
+<!--ESTO ES LA SEPARACION CON LO ACTUAL-->
 
 <!-- <div *ngIf="showImage"> 
      <button class="mapa" (click)="escribir()"></button>
